[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo2md"
version = "0.1.0"
authors = [
  { name = "Tiago Silva" },
]
description = "Convert a local repository into a single Markdown document."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pyperclip"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
repo2md = "repo2md.main:main"

[tool.hatch.build.targets.wheel]
include = ["src/repo2md"]
